# dev-container-as-a-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cdktf.json  entry_script.sh  pyproject.toml  vscode-host.yaml
scripts/: generate-dev-env.sh  terraform_output_to_kubeconfig.sh
src/devcontainers/: cli.py  config.py  github_service.py  kubernetes_service.py  vscode-host.yaml
src/infra/: azure_stack.py  config.py  deployer.py  docker_stack.py
