[tool.poetry]
name = "devcontainers"
version = "0.1.0"
description = ""
authors = ["Patrick Strasser <strasserpatrick@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
kubernetes = "^28.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pyproject-flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
