[tool.poetry]
name = "devcontainers"
version = "0.1.0"
description = ""
authors = ["Patrick Strasser <strasserpatrick@outlook.de>"]
readme = "README.md"

packages = [
    {include = "devcontainers", from = "src"},
]

[tool.poetry.scripts]
devcontainers = "devcontainers.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
kubernetes = "^28.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pyproject-flake8 = "^6.1.0"
blacken-docs = "^1.16.0"

[tool.poetry.group.infra.dependencies]
pydantic-settings = "^2.1.0"
pydantic = "^2.5.3"
cdktf = "^0.19.2"
cdktf-cdktf-provider-azurerm = "^11.2.0"
cdktf-cdktf-provider-docker = "^10.0.0"

[tool.black]
line-length = 88
skip = ['.venv']

[tool.isort]
profile = "black"
skip = ['.venv']
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
